[3단계 - 리팩터링] 멍구(이유영) 미션 제출합니다. (#982)
* refactor(http): 응답 헤더 관리 구조 개선으로 Set-Cookie 중복 지원

- ResponseHeaders 일급컬렉션으로 응답 헤더를 관리하도록 변경

* refactor(RequestLine): 알맞은 예외를 던지도록 변경

* refactor(Session): 필요 없는 코드 제거

* refactor(SessionManager): ConcurrentHashMap 활용으로 세션 관리 동시성 문제 해결

* test(tomcat): 기댓값 하드코딩으로 인한 테스트 실패 해결

* refactor: 1 - HttpRequest 클래스 구현하기

* refactor: 2 - HttpResponse 클래스 구현하기

* refactor: 3 - Controller 인터페이스 추가하기

* refactor: Controller에서 session을 주입받도록 변경

* fix: outputStream 종료로 인한 500 응답 전송 누락 문제 해결

* fix: 리소스 read 실패 시 404를 반환하도록 수정

* refactor: 리소스 read 실패 시 발생하는 예외를 HttpProcessor에서 공통적으로 처리하도록 수정

* refactor(ResponseHeaders): 헤더 키 정규화와 출력 순서 안정화